--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
-version: '3'
+version: '2'
 services:
   web:
+    image: nibocontainerregistry.azurecr.io/matrix:latest
     working_dir: /var/app
-    env_file:
-      - variables.env
+    # env_file:
+    #   - variables.env
     ports:
      - '8080:8080'    
     # entrypoint: 'sh /docker-entrypoint.sh npm run start'
-    build:
-      context: ./
+    # build:
+    #   context: ./
